--- a/.env.example
+++ b/.env.example
@@ -64,10 +64,11 @@ LOG_LEVEL=info
 LOG_FILE_PATH=/var/log/aim-trainer/app.log
 
 # ===============================================
-# REDIS (Optional - for caching)
+# REDIS (Optional - for caching & performance)
 # ===============================================
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
+# Uncomment to enable Redis caching
+# REDIS_URL=redis://localhost:6379
+# REDIS_PASSWORD=
 
 # ===============================================
 # MONITORING
