--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:reset": "prisma db push --force-reset",
     "db:migrate": "prisma migrate deploy",
     "health": "curl -f http://localhost:3002/health || exit 1",
+    "health:prod": "curl -f https://aim.liorabelleleather.com/health || exit 1",
     "test:connection": "node -e \"console.log('Testing server connection...'); require('./dist/index.js');\""
   },
   "dependencies": {
